@@ -20,6 +20,7 @@ xxx
   - Free internally allocated memory if something goes wrong in token_read()
   - Setting ssl-mode to none now actually works
   - Link ldap code against libresolv if it is present on the system. Eric Fagan
+  - Fix doble frees relating to username_mangle.
   
 
 
